# test-matsuzawa-20251217-2

./: pyproject.toml
.research/: research_history.json
.research/results/: stderr.txt  stdout.txt
config/: config.yaml
config/runs/: comparative-1-adam-federated-learning.yaml  comparative-1-adam-illconditioned-stress-test.yaml  comparative-1-adam-mnist-binary-classification.yaml  comparative-1-adam-synthetic-streaming-lr.yaml  proposed-sdslr-federated-learning.yaml  proposed-sdslr-illconditioned-stress-test.yaml  proposed-sdslr-mnist-binary-classification.yaml  proposed-sdslr-synthetic-streaming-lr.yaml
src/: evaluate.py  main.py  model.py  preprocess.py  train.py
