[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sdslr-experiments"
version = "0.1.0"
description = "Spectrum-Dependent Streaming Adaptive Learning Rate (SDSLR) - Optimization experiments"
requires-python = ">=3.10"
authors = [{name = "Researcher", email = "researcher@example.com"}]
dependencies = [
    "hydra-core>=1.3.0",
    "omegaconf>=2.3.0",
    "wandb>=0.15.0",
    "optuna>=3.0.0",
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "pandas>=2.0.0",
    "torch>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
]

[project.urls]
Homepage = "https://github.com/example/sdslr-experiments"
Repository = "https://github.com/example/sdslr-experiments"

[tool.hatch.build.targets.wheel]
packages = ["src"]
